# COP_Cplusplus_SixthLaboratory

./: CMakeLists.txt  Lekcija6.pptx  README.md
